--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
           <a href="index.html">
 
-            <img src="assets/imges/logo.svg" alt="Logotipo de Bienes Raices">
+            <img src="assets/images/logo.svg" alt="Logotipo de Bienes Raices">
 
           </a>
           <nav class="navegacion"> <!-- nav son para enlaces -->
@@ -41,7 +41,7 @@
       <h2 class="fw-300 centrar-texto">Más Sobre Nosotros</h2>
       <div class="iconos-nosotros">
         <div class="icono">
-          <img src="assets/imges/icono1.svg" alt="Icono Seguridad">
+          <img src="assets/images/icono1.svg" alt="Icono Seguridad">
           <h3>Seguridad</h3>
 
           <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -51,7 +51,7 @@
         </div>
 
         <div class="icono">
-          <img src="assets/imges/icono2.svg" alt="Icono Mejor Precio">
+          <img src="assets/images/icono2.svg" alt="Icono Mejor Precio">
           <h3>El Mejor Precio</h3>
 
           <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -61,7 +61,7 @@
         </div>
 
         <div class="icono">
-          <img src="assets/imges/icono3.svg" alt="Icono a Tiempo">
+          <img src="assets/images/icono3.svg" alt="Icono a Tiempo">
           <h3>Tiempo</h3>
 
           <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -81,22 +81,22 @@
       <h2 class="fw-300 centrar-texto">Casas y Depas en Venta</h2>
       <div class="contenedor-anuncios">
         <div class="anuncio">
-          <img src="assets/imges/anuncio1.jpg" alt="Anuncio casa en el lago">
+          <img src="assets/images/anuncio1.jpg" alt="Anuncio casa en el lago">
           <div class="contenido-anuncio">
             <h3>Casa de Lujo en el Lago</h3>
             <p>Casa en el Lago con excelente vista,acabados de lujo con excelentes precios</p>
             <p class="precio">$3.000.000</p>
             <ul class= "iconos-caracteristicas"> <!-- listado-->
               <li>
-                <img src="assets/imges/icono_wc.svg" alt="icono wc">
+                <img src="assets/images/icono_wc.svg" alt="icono wc">
                 <p>3</p>
               </li>
               <li>
-                <img src="assets/imges/icono_estacionamiento.svg" alt="icono autos">
+                <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                 <p>3</p>
               </li>
               <li>
-                <img src="assets/imges/icono_dormitorio.svg" alt="icono dormitorio">
+                <img src="assets/images/icono_dormitorio.svg" alt="icono dormitorio">
                 <p>2</p>
               </li>
             </ul>
@@ -107,22 +107,22 @@
 
 
         <div class="anuncio">
-          <img src="assets/imges/anuncio2.jpg" alt="Anuncio casa terminados en lujo">
+          <img src="assets/images/anuncio2.jpg" alt="Anuncio casa terminados en lujo">
           <div class="contenido-anuncio">
             <h3>Casa terminados de Lujo</h3>
             <p>Casa con diseño moderno,asi como tenologia inteligente y amueblada</p>
             <p class="precio">$2.000.000</p>
             <ul class= "iconos-caracteristicas"> <!-- listado-->
               <li>
-                <img src="assets/imges/icono_wc.svg" alt="icono wc">
+                <img src="assets/images/icono_wc.svg" alt="icono wc">
                 <p>3</p>
               </li>
               <li>
-                <img src="assets/imges/icono_estacionamiento.svg" alt="icono autos">
+                <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                 <p>4</p>
               </li>
               <li>
-                <img src="assets/imges/icono_dormitorio.svg" alt="icono dormitorio">
+                <img src="assets/images/icono_dormitorio.svg" alt="icono dormitorio">
                 <p>4</p>
               </li>
             </ul>
@@ -132,22 +132,22 @@
         </div>
 
         <div class="anuncio">
-          <img src="assets/imges/anuncio3.jpg" alt="Anuncio casa con alberca">
+          <img src="assets/images/anuncio3.jpg" alt="Anuncio casa con alberca">
           <div class="contenido-anuncio contenedor">
             <h3>Casa con Alberca</h3>
             <p>Casa con alberca y acabados de lujos en la ciudad,excelente oportunidad</p>
             <p class="precio">$3.000.000</p>
             <ul class="iconos-caracteristicas"> <!-- listado-->
               <li>
-                <img src="assets/imges/icono_wc.svg" alt="icono wc">
+                <img src="assets/images/icono_wc.svg" alt="icono wc">
                 <p>3</p>
               </li>
               <li>
-                <img src="assets/imges/icono_estacionamiento.svg" alt="icono autos">
+                <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
                 <p>3</p>
               </li>
               <li>
-                <img src="assets/imges/icono_dormitorio.svg" alt="icono dormitorio">
+                <img src="assets/images/icono_dormitorio.svg" alt="icono dormitorio">
                 <p>3</p>
               </li>
             </ul>
@@ -185,7 +185,7 @@
 
         <article class="entrada-blog">
           <div class="imagen">
-              <img src="assets/imges/blog1.jpg" alt="Entrada de blog">
+              <img src="assets/images/blog1.jpg" alt="Entrada de blog">
 
           </div>
           <div class="texto-entrada">
@@ -204,7 +204,7 @@
 
         <article class="entrada-blog">
           <div class="imagen">
-            <img src="assets/imges/blog2.jpg" alt="Entrada de blog">
+            <img src="assets/images/blog2.jpg" alt="Entrada de blog">
           </div>
 
           <div class="texto-entrada">
