Add form contacto, fix links

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
           </a>
           <nav class="navegacion"> <!-- nav son para enlaces -->
-            <a href="Nosotros.html">Nosotros</a>
+            <a href="nosotros.html">Nosotros</a>
             <a href="anuncios.html">Anuncios</a>
             <a href="blog.html">Blog</a>
-            <a href="contato.html">Contacto</a>
+            <a href="contacto.html">Contacto</a>
           </nav>
 
         </div>
@@ -248,7 +248,7 @@
           <a href="Nosotros.html">Nosotros</a>
           <a href="anuncios.html">Anuncios</a>
           <a href="blog.html">Blog</a>
-          <a href="contato.html">Contacto</a>
+          <a href="contacto.html">Contacto</a>
 
         </nav>
 
