--- a/contacto.html
+++ b/contacto.html
@@ -2,9 +2,32 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/styles/normalize.css">
+    <link rel="stylesheet" href="assets/styles/style-contact.css">
+    <title>Contacto</title>
   </head>
   <body>
-
+    <h1>Contáctenos!</h1>
+    <form class="contact-us">
+      <div class="form-group">
+        <label for="inputEmail" class="col-form-label col-form-label-sm">Correo electrónico</label>
+        <input type="email" class="form-control form-control-sm" id="inputEmail" aria-describedby="emailHelp" placeholder="Escriba su email">
+        <small id="emailHelp" class="form-text text-muted">Nunca compartiremos su correo electrónico con nadie más.</small>
+      </div>
+      <div class="form-group">
+        <label for="inputFullName" class="col-form-label col-form-label-sm">Nombre completo</label>
+        <input type="text" class="form-control form-control-sm" id="inputFullName" placeholder="Escriba su nombre completo">
+      </div>
+      <div class="form-group">
+        <label for="inputPhoneNumber" class="col-form-label col-form-label-sm">Número de contacto</label>
+        <input type="text" class="form-control form-control-sm" id="inputPhoneNumber" placeholder="Escriba su número de contacto">
+      </div>
+      <div class="form-group">
+        <label for="messageTextArea" class="col-form-label col-form-label-sm">Mensaje</label>
+        <textarea class="form-control form-control-sm" id="messageTextArea" rows="3"></textarea>
+      </div>
+      <button type="submit" class="btn btn-info">Enviar</button>
+    </form>
   </body>
 </html>
