--- a/contacto.html
+++ b/contacto.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles/normalize.css">
@@ -10,7 +12,20 @@
     <title>Contacto</title>
   </head>
   <body>
-    <h1>Contáctenos!</h1>
+    <header class="site-header inicio"> 
+      <div class="contenedor contenido-header"> 
+        <div class="barra">
+          <h1>Contáctenos!</h1>
+          <nav class="navegacion">
+            <a href="index.html">Home</a>
+            <a href="nosotros.html">Nosotros</a>
+            <a href="anuncios.html">Anuncios</a>
+            <a href="blog.html">Blog</a>
+          </nav>
+        </div>
+      </div>
+    </header>
+
     <form class="contact-us">
       <div class="form-group">
         <label for="inputEmail" class="col-form-label col-form-label-lg">Correo electrónico</label>
