--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <body>
 
-    <header class="site-header inicio"> <!-- agrego dos clases -->
-      <div class="contenedor contenido-header"> <!--creo dos clases-->
+    <header class="site-header inicio">
+      <div class="contenedor contenido-header">
 
         <div class="barra">
 
@@ -23,7 +23,7 @@
             <img src="assets/images/logo.svg" alt="Logotipo de Bienes Raices">
 
           </a>
-          <nav class="navegacion"> <!-- nav son para enlaces -->
+          <nav class="navegacion">
             <a href="nosotros.html">Nosotros</a>
             <a href="anuncios.html">Anuncios</a>
             <a href="blog.html">Blog</a>
@@ -33,7 +33,7 @@
         </div>
         <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
 
-      </div> <!--contenedor-->
+      </div>
 
 
     </header>
@@ -78,7 +78,7 @@
 
     </section>
 
-    <main><!-- main es lo principal de una pagina solo debe haber uno solo -->
+    <main>
       <h2 class="fw-300 centrar-texto">Casas y Depas en Venta</h2>
       <div class="contenedor-anuncios">
         <div class="anuncio">
@@ -87,7 +87,7 @@
             <h3>Casa de Lujo en el Lago</h3>
             <p>Casa en el Lago con excelente vista,acabados de lujo con excelentes precios</p>
             <p class="precio">$3.000.000</p>
-            <ul class= "iconos-caracteristicas"> <!-- listado-->
+            <ul class= "iconos-caracteristicas">
               <li>
                 <img src="assets/images/icono_wc.svg" alt="icono wc">
                 <p>3</p>
@@ -113,7 +113,7 @@
             <h3>Casa terminados de Lujo</h3>
             <p>Casa con diseño moderno,asi como tenologia inteligente y amueblada</p>
             <p class="precio">$2.000.000</p>
-            <ul class= "iconos-caracteristicas"> <!-- listado-->
+            <ul class= "iconos-caracteristicas">
               <li>
                 <img src="assets/images/icono_wc.svg" alt="icono wc">
                 <p>3</p>
@@ -138,7 +138,7 @@
             <h3>Casa con Alberca</h3>
             <p>Casa con alberca y acabados de lujos en la ciudad,excelente oportunidad</p>
             <p class="precio">$3.000.000</p>
-            <ul class="iconos-caracteristicas"> <!-- listado-->
+            <ul class="iconos-caracteristicas">
               <li>
                 <img src="assets/images/icono_wc.svg" alt="icono wc">
                 <p>3</p>
