add pestañas faltantes

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="assets/styles/style.css">
-  </head>
-  <body>
-    <h1>Nosotros</h1>
-    <a href="index.html">Volver</a>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Bienes Raices</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+
+    <header class="site-header">
+        <div class="contenedor contenido-header">
+            <div class="barra">
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="Logotipo de Bienes Raices">
+                </a>
+                <div class="mobile-menu">
+                    <a href="#navegacion">
+                        <img src="img/barras.svg" alt="Icono Menu">
+                    </a>
+                </div>
+
+                <nav id="navegacion" class="navegacion">
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="anuncios.html">Anuncios</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+            </div>
+        </div> <!-- contenedor -->
+    </header>
+
+    <main class="contenedor">
+
+        <div class="contenido-nosotros">
+            <div class="imagen">
+                <img src="img/nosotros.jpg" alt="Imagen Sobre Nosotros">
+            </div>
+            <div class="texto-nosotros">
+                <blockquote>25 Años de Experiencia</blockquote>
+
+               <p>Nuestra empresa se construyó teniendo como pilares la honestidad, el profesionalismo, compromiso  y responsabilidad, buscando seguir mejorando día a día, acompañando el crecimiento de la firma la incorporación de gente nueva que entre capacidad y juventud desarrollaron la visión de ser la empresa líder en el mercado inmobiliario.</p>
+
+               <p>A fin de ofrecer servicios inmobiliarios de excelencia a la comunidad salteña en función de sus 25 años de experiencia en este rubro. Desde dicho momento la empresa se construyó para ser la empresa líder del mercado inmobiliario.</p> 
+            </div>
+        </div>
+    </main>
+
+    <section class="contenedor seccion">
+        <h2 class="fw-300 centrar-texto">Más Sobre Nosotros</h2>
+
+        <div class="iconos-nosotros">
+            <div class="icono">
+                <img src="img/icono1.svg" alt="Icono Seguridad">
+                <h3>Seguridad</h3>
+                <p>El mejor sistema de detección de intrusos, que combina distintos tipos de sensores para protegerte cuando estás dentro de tu hogar y cuando no hay nadie en la propiedad.
+            </div>
+
+            <div class="icono">
+                <img src="img/icono2.svg" alt="Icono Mejor Precio">
+                <h3>El Mejor Precio</h3>
+                <p>El mejor precio de departamentos y casas de lujos lo encontras acá. Empeza a Planificar tu Futuro.</p>
+            </div>
+
+            <div class="icono">
+                <img src="img/icono3.svg" alt="Icono a Tiempo">
+                <h3>A Tiempo</h3>
+                <p>Contamos con todos los recursos para entregarte el inmueble a tiempo. </p>
+            </div>
+        </div>
+    </section>
+
+    <footer class="site-footer seccion">
+        <div class="contenedor contenedor-footer">
+            <nav class="navegacion">
+                <a href="nosotros.html">Nosotros</a>
+                <a href="anuncios.html">Anuncios</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Contacto</a>
+            </nav>
+            <p class="copyright">Todos los Derechos Reservados 2021 &copy; </p>
+        </div>
+    </footer>
+</body>
 </html>
