--- a/Nosotros.html
+++ b/Nosotros.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bienes Raices</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
+     <link rel="stylesheet" href="assets/styles/normalize.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
 
@@ -15,11 +15,11 @@
         <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="index.html">
-                    <img src="img/logo.svg" alt="Logotipo de Bienes Raices">
+                    <img src="assets/images/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
                 <div class="mobile-menu">
                     <a href="#navegacion">
-                        <img src="img/barras.svg" alt="Icono Menu">
+                        <img src="assets/images/barras.svg" alt="Icono Menu">
                     </a>
                 </div>
 
