--- a/contacto.html
+++ b/contacto.html
@@ -26,27 +26,36 @@
       </div>
     </header>
 
-    <form class="contact-us">
-      <div class="form-group">
-        <label for="inputEmail" class="col-form-label col-form-label-lg">Correo electrónico</label>
-        <input type="email" class="form-control form-control-lg" id="inputEmail" aria-describedby="emailHelp" placeholder="Escriba su email">
-        <small id="emailHelp" class="form-text text-muted">Nunca compartiremos su correo electrónico con nadie más.</small>
+    <div class="container">
+      <br />
+      <div class="row">
+          <div class="col-md-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13138.472511985594!2d-58.4200673302246!3d-34.58852789999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca83d490b497%3A0xf49058477ec5e997!2sImar%20%26%20Asociados%20Negocios%20Inmobiliarios!5e0!3m2!1ses-419!2sar!4v1622068898062!5m2!1ses-419!2sar" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+          <br />
+          <div class="col-md-6">
+              <form class="contact-us">
+                  <div class="form-group">
+                      <label for="form-name">Nombre completo</label>
+                      <input type="email" class="form-control form-control-lg" id="form-name" placeholder="Ingrese su nombre completo">
+                  </div>
+                  <div class="form-group">
+                      <label for="form-email">Correo electrónico</label>
+                      <input type="email" class="form-control form-control-lg" id="form-email" placeholder="Ingrese su correo electrónico">
+                  </div>
+                  <div class="form-group">
+                      <label for="form-subject">Número de contacto</label>
+                      <input type="text" class="form-control form-control-lg" id="form-subject" placeholder="Ingrese un número de contacto">
+                  </div>
+                  <div class="form-group">
+                      <label for="form-message">Mensaje</label>
+                      <textarea class="form-control form-control-lg" id="form-message" placeholder="Ingrese su mensaje"></textarea>
+                  </div>
+                  <button class="btn btn-info btn-lg" type="submit">Contactenos</button>                
+              </form>
+          </div>
       </div>
-      <div class="form-group">
-        <label for="inputFullName" class="col-form-label col-form-label-lg">Nombre completo</label>
-        <input type="text" class="form-control form-control-lg" id="inputFullName" placeholder="Escriba su nombre completo">
-      </div>
-      <div class="form-group">
-        <label for="inputPhoneNumber" class="col-form-label col-form-label-lg">Número de contacto</label>
-        <input type="text" class="form-control form-control-lg" id="inputPhoneNumber" placeholder="Escriba su número de contacto">
-      </div>
-      <div class="form-group">
-        <label for="messageTextArea" class="col-form-label col-form-label-lg">Mensaje</label>
-        <textarea class="form-control form-control-lg" id="messageTextArea" rows="3"></textarea>
-      </div>
-      <button type="submit" class="btn btn-info">Enviar</button>
-    </form>
-
+  </div>
     <footer class="site-footer seccion">
       <div class="contenedor contenedor-footer">
         <nav class="navegacion">
@@ -59,8 +68,6 @@
         <p class="copyrigth">Todos los Derechos Reservados &copy; </p>
 
       </div>
-
-
     </footer>
   </body>
 </html>
