--- a/index.html
+++ b/index.html
@@ -1,266 +1,219 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-
-    <title>BIENES RAICES</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Bienes Raices</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/normalize.css">
-    <link rel="stylesheet" href="assets/styles/style.css">
-  </head>
-
-  <body>
+</head>
+<body>
 
     <header class="site-header inicio">
-      <div class="contenedor contenido-header">
+        <div class="contenedor contenido-header">
+            <div class="barra">
+                <a href="index.html">
+                    <img src="img/logo.svg" alt="Logotipo de Bienes Raices">
+                </a>
 
-        <div class="barra">
+                <div class="mobile-menu">
+                    <a href="#navegacion">
+                        <img src="img/barras.svg" alt="Icono Menu">
+                    </a>
+                </div>
 
-          <a href="index.html">
-
-            <img src="assets/images/logo.svg" alt="Logotipo de Bienes Raices">
-
-          </a>
-          <nav class="navegacion">
-            <a href="nosotros.html">Nosotros</a>
-            <a href="anuncios.html">Anuncios</a>
-            <a href="blog.html">Blog</a>
-            <a href="contacto.html">Contacto</a>
-          </nav>
-
-        </div>
-        <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
-
-      </div>
-
-
+                <nav id="navegacion" class="navegacion">
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="anuncios.html">Anuncios</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+            </div>
+            <h1 class="animate__animated animate__rollIn"> Venta de Casas y Departamentos Exclusivos de Lujo </h1>
+        </div> <!-- contenedor -->
     </header>
 
     <section class="contenedor seccion">
-      <h2 class="fw-300 centrar-texto">Más Sobre Nosotros</h2>
-      <div class="iconos-nosotros">
-        <div class="icono">
-          <img src="assets/images/icono1.svg" alt="Icono Seguridad">
-          <h3>Seguridad</h3>
+        <h2 class="fw-300 centrar-texto">Más Sobre Nosotros</h2>
 
-          <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="iconos-nosotros">
+            <div class="icono">
+                <img src="img/icono1.svg" alt="Icono Seguridad">
+                <head>
 
+                </head>
+                <h3>SEGURIDAD</h3>
+                <p> El mejor sistema de detección de intrusos, que combina distintos tipos de sensores para protegerte cuando estás dentro de tu hogar y cuando no hay nadie en la propiedad. </p>
+            </div>
+
+            <div class="icono">
+                <img src="img/icono2.svg" alt="Icono Mejor Precio">
+                <h3>El Mejor Precio</h3>
+                <p> El mejor precio de departamentos y casas de lujos lo encontras acá. Empeza a Planificar tu Futuro. </p>
+            </div>
+
+            <div class="icono">
+                <img src="img/icono3.svg" alt="Icono a Tiempo">
+                <h3>A Tiempo</h3>
+                <p>Contamos con todos los recursos para entregarte el inmueble a tiempo. </p>
+            </div>
         </div>
-
-        <div class="icono">
-          <img src="assets/images/icono2.svg" alt="Icono Mejor Precio">
-          <h3>El Mejor Precio</h3>
-
-          <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-        </div>
-
-        <div class="icono">
-          <img src="assets/images/icono3.svg" alt="Icono a Tiempo">
-          <h3>Tiempo</h3>
-
-          <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-
-        </div>
-
-      </div>
-
-
-
     </section>
 
-    <main>
-      <h2 class="fw-300 centrar-texto">Casas y Depas en Venta</h2>
-      <div class="contenedor-anuncios">
-        <div class="anuncio">
-          <img src="assets/images/anuncio1.jpg" alt="Anuncio casa en el lago">
-          <div class="contenido-anuncio">
-            <h3>Casa de Lujo en el Lago</h3>
-            <p>Casa en el Lago con excelente vista,acabados de lujo con excelentes precios</p>
-            <p class="precio">$3.000.000</p>
-            <ul class= "iconos-caracteristicas">
-              <li>
-                <img src="assets/images/icono_wc.svg" alt="icono wc">
-                <p>3</p>
-              </li>
-              <li>
-                <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
-                <p>3</p>
-              </li>
-              <li>
-                <img src="assets/images/icono_dormitorio.svg" alt="icono dormitorio">
-                <p>2</p>
-              </li>
-            </ul>
-            <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+    <main class="seccion contenedor">
+        <h2 class="fw-300 centrar-texto">Casas y Departamentos en Venta</h2>
 
-          </div>
+        <div class="contenedor-anuncios">
+            <div class="anuncio">
+                <img src="img/anuncio1.jpg" alt="Anuncio casa en el lago">
+                <div class="contenido-anuncio">
+                    <h3>Casa de Lujo en el Lago</h3>
+                    <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$3,000,0000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="anuncio">
+                <img src="img/anuncio2.jpg" alt="Anuncio casa de lujo">
+                <div class="contenido-anuncio">
+                    <h3>Casa terminados de lujo</h3>
+                    <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
+                    <p class="precio">$2,000,0000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
+
+                </div>
+            </div>
+
+            <div class="anuncio">
+                <img src="img/anuncio3.jpg" alt="Anuncio casa con alberca">
+                <div class="contenido-anuncio">
+                    <h3>Casa con alberca</h3>
+                    <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+                    <p class="precio">$3,000,0000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="icono habitaciones">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                </div>
+            </div>
         </div>
 
-
-        <div class="anuncio">
-          <img src="assets/images/anuncio2.jpg" alt="Anuncio casa terminados en lujo">
-          <div class="contenido-anuncio">
-            <h3>Casa terminados de Lujo</h3>
-            <p>Casa con diseño moderno,asi como tenologia inteligente y amueblada</p>
-            <p class="precio">$2.000.000</p>
-            <ul class= "iconos-caracteristicas">
-              <li>
-                <img src="assets/images/icono_wc.svg" alt="icono wc">
-                <p>3</p>
-              </li>
-              <li>
-                <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
-                <p>4</p>
-              </li>
-              <li>
-                <img src="assets/images/icono_dormitorio.svg" alt="icono dormitorio">
-                <p>4</p>
-              </li>
-            </ul>
-            <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
-
-          </div>
+        <div class="ver-todas">
+            <a href="anuncios.html" class="boton boton-verde">Ver Todas</a>
         </div>
-
-        <div class="anuncio">
-          <img src="assets/images/anuncio3.jpg" alt="Anuncio casa con alberca">
-          <div class="contenido-anuncio contenedor">
-            <h3>Casa con Alberca</h3>
-            <p>Casa con alberca y acabados de lujos en la ciudad,excelente oportunidad</p>
-            <p class="precio">$3.000.000</p>
-            <ul class="iconos-caracteristicas">
-              <li>
-                <img src="assets/images/icono_wc.svg" alt="icono wc">
-                <p>3</p>
-              </li>
-              <li>
-                <img src="assets/images/icono_estacionamiento.svg" alt="icono autos">
-                <p>3</p>
-              </li>
-              <li>
-                <img src="assets/images/icono_dormitorio.svg" alt="icono dormitorio">
-                <p>3</p>
-              </li>
-            </ul>
-            <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
-
-          </div>
-        </div>
-
-      </div>
-
-      <div class="ver-todas seccion">
-          <a href="anuncios.html" class="boton boton-verde">Ver Todas</a>
-
-      </div>
-
-
     </main>
 
     <section class="imagen-contacto">
-      <div class="contenedor contenido-contacto">
-        <h2>Encuentra la casa de tus sueños</h2>
-        <p>Llena el formulario de contacto y
-          un asesor se pondra en contacto contigo</p>
-        <a href="contacto.html" class="boton boton-amarillo" >Contactanos</a>
-
-      </div>
-
-
+        <div class="contenedor contenido-contacto">
+            <h2>Encuentra la casa de tus sueños!</h2>
+            <p>Llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad</p>
+            <a href="contacto.html" class="boton boton-amarillo">Contactános</a>
+        </div>
     </section>
 
-
     <div class="seccion-inferior contenedor seccion">
-      <section class="blog">
-        <h3 class=" centrar-texto fw-300">Nuestro Blog</h3>
+        <section class="blog">
+            <h3 class="centrar-texto fw-300">Nuestro Blog</h3>
 
-        <article class="entrada-blog">
-          <div class="imagen">
-              <img src="assets/images/blog1.jpg" alt="Entrada de blog">
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="img/blog1.jpg" alt="Entrada de blog">
+                </div>
+                <div class="texto-entrada">
+                    <a href="entrada.html">
+                        <h4>Terraza  en el techo de tu casa</h4>
+                    </a>
+                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                    <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorrando dinero</p>
+                </div>
+            </article>
 
-          </div>
-          <div class="texto-entrada">
-            <a href="#">
-              <h4>Terraza en el techo de tu casa</h4>
-            </a>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="img/blog2.jpg" alt="Entrada de blog">
+                </div>
+                <div class="texto-entrada">
+                    <a href="entrada.html">
+                        <h4>Guía para la decoración de tu hogar</h4>
+                    </a>
+                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                    <p>Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio</p>
+                </div>
+            </article>
+        </section>
 
-            <p>Escrito el: <span>20/10/2020</span> por <span>Admin</span></p>
-            <p>Consejos para contruir una terraza en el techo
-            con los mejores mateirales y ahorrando dinero</p>
-
-          </div>
-
-
-        </article>
-
-        <article class="entrada-blog">
-          <div class="imagen">
-            <img src="assets/images/blog2.jpg" alt="Entrada de blog">
-          </div>
-
-          <div class="texto-entrada">
-            <a href="#">
-              <h4>Guia para la decoracion de tu hogar</h4>
-            </a>
-
-            <p>Escrito el: <span>20/10/2020</span> por <span>Admin</span></p>
-            <p>Maximiza el espacio en tu hogar con esta guia, aprende a combinar
-            muebles y colores para darle vida a tu espacio</p>
-
-          </div>
-
-
-        </article>
-
-      </section>
-
-
-      <section class="testimoniales">
-        <h3 class=" centrar-texto fw-300"> Testimoniales</h3>
-        <div class="testimonial">
-          <blockquote>
-            El personal se comporto de una excelente forma, muy buena atencion
-            y la casa que me ofrecieron cumple con todas mis espectativas
-
-          </blockquote>
-          <p>Jairo Mauricio Chiri</p>
-
-        </div>
-
-
-      </section>
+        <section class="testimoniales">
+            <h3 class="centrar-texto fw-300">Testimoniales</h3>
+            <div class="testimonial">
+                
+                <blockquote>
+                    El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas.
+                </blockquote>
+                <p>- Juan De la torre</p>
+            </div>
+        </section>
 
     </div>
 
-
     <footer class="site-footer seccion">
-      <div class="contenedor contenedor-footer">
-        <nav class="navegacion">
-          <a href="Nosotros.html">Nosotros</a>
-          <a href="anuncios.html">Anuncios</a>
-          <a href="blog.html">Blog</a>
-          <a href="contacto.html">Contacto</a>
-
-        </nav>
-
-
-        <p class="copyrigth">Todos los Derechos Reservados &copy; </p>
-
-      </div>
-
-
+        <div class="contenedor contenedor-footer">
+            <nav class="navegacion">
+                <a href="nosotros.html">Nosotros</a>
+                <a href="anuncios.html">Anuncios</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Contacto</a>
+            </nav>
+            <p class="copyright">Todos los Derechos Reservados 2021 &copy; </p>
+        </div>
     </footer>
-
-
-  </body>
+</body>
 </html>
