agregre blog.html, estilo.css y unas imagenes.Saludos

--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Bienes Raices</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
 
-  </body>
+    <header class="site-header">
+        <div class="contenedor contenido-header">
+            <div class="barra">
+                <a href="/">
+                    <img src="img/logo.svg" alt="Logotipo de Bienes Raices">
+                </a>
+                <div class="mobile-menu">
+                    <a href="#navegacion">
+                        <img src="img/barras.svg" alt="Icono Menu">
+                    </a>
+                </div>
+
+                <nav id="navegacion" class="navegacion">
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="anuncios.html">Anuncios</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+            </div>
+        </div> <!-- contenedor -->
+    </header>
+
+    
+
+    <main class="contenedor seccion contenido-centrado">
+        <h1 class="fw-300 centrar-texto">Nuestro Blog</h1>
+
+
+        <div class="content-all">
+            <div class="content-carrousel">
+               <figure><a href="anuncio.html"> <img src="img/anuncio1.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="img/anuncio2.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="img/anuncio3.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="img/anuncio4.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="img/anuncio5.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="img/anuncio6.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="img/anuncio7.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="img/anuncio8.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="img/anuncio9.jpg"></figure>
+               <figure><a href="anuncio.html"> <img src="img/anuncio10.jpg"></figure>
+            </div>
+         </div>    
+    </main>
+
+    <footer class="site-footer seccion">
+        <div class="contenedor contenedor-footer">
+            <nav class="navegacion">
+                <a href="nosotros.html">Nosotros</a>
+                <a href="anuncios.html">Anuncios</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Contacto</a>
+            </nav>
+            <p class="copyright">Todos los Derechos Reservados 2021 &copy; </p>
+        </div>
+    </footer>
+</body>
 </html>
